 4. Store album-sorts in defaults.
 5. Fix setting window titlebar back to "Logitech Media Server" when no song.
 6. Fix layout in 'Manage players' dialog.
 7. Dim play buttons in 'Manage players' dialog if player has no track.
 8. Fix colour of power icons in menus.
 9. Add monochrome pandora and iheartradio icons.
10. Always set axios/html language to LMS's.

1.5.1
-----
 1. Fix 'Play all' and 'Play next' from header.
 2. Don't hide 'Interface' from server settings, just hide some options.
 3. Fix icon mapping of some icons.
 4. Hide jumplist when showing Artists/Album/etc. selection of genre.
 5. When listing for Artists, Composers, or Conductors of a genre ask for
    textkey.
 6. Fix colour of active jumplist item.
 7. Map application icons to symbolic icons.
 8. Show volume overlay when use keyboard to change volume.
 9. If a list of items has some with, and some without, images then don't
    assign a blank image to those without.
10. Fix SVG icons when in grid.
11. Dim some buttons if nothing in queue, or no player conected.
12. Fix rating not showing unless 'landscape'
13. Update translations.
14. Add Danish translation - thanks to Jens Svalgaard Kohrt
15. Only use browser's language setting if it starts with 'en'
16. Add 'Random Albums' choice when listing a genre.
17. Artist/album actions are queired synchronously, so check recieved response
    is for the current item.
18. Add emblems to artist images.
19. Allow drag'n'drop from file manager onto play queue.

1.5.0
-----
 1. When LMS is set to list a multi-CD album as 1 album, then visually split up
    the CDs' track listings, and allow to play individual CDs.
 2. Add a play icon over cover-art of current track in queue.
 3. Add 'More' action to subtoolbar for artist and albums to acces online
    services, biography, artist photos, and album review.
 4. Group synced players in 'Manage players' dialog.
 5. Set max-width for list in 'Manage players' dialog.
 6. Center-align text in grid view.